--- a/verify_models.ipynb
+++ b/verify_models.ipynb
@@ -10,13 +10,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports.\n",
-    "\n",
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,8 +38,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definitions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +62,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Helper Functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +168,13 @@
     "\n",
     "    # Load image.\n",
     "    orig_img = caffe.io.load_image(image_path)\n",
-    "    print(orig_img.shape)\n",
+    "    # print(orig_img.shape)\n",
     "\n",
     "    # Resize image.\n",
     "    min_dim = min(orig_img.shape[:2])\n",
     "    new_size = (int(orig_img.shape[0]*img_scale/float(min_dim)), int(orig_img.shape[1]*img_scale/float(min_dim)))\n",
     "    img = resize(orig_img, new_size)\n",
-    "    print(img.shape)\n",
+    "    # print(img.shape)\n",
     "\n",
     "    # Change input shape.\n",
     "    caffe_model.blobs['data'].reshape(1, 3, img.shape[0], img.shape[1])\n",
@@ -164,11 +183,12 @@
     "    transformer = get_ILSVRC_net_transformer_with_shape((1, 3, img.shape[0], img.shape[1]))\n",
     "\n",
     "    # Set input as preprocessed image.\n",
-    "    caffe_model.blobs['data'].data[...] = transformer.preprocess('data', img)\n",
+    "    transformed_img = transformer.preprocess('data', img)\n",
+    "    caffe_model.blobs['data'].data[...] = transformed_img\n",
     "\n",
     "    # Get output.\n",
     "    out = caffe_model.forward(end=last_layer)\n",
-    "    return out\n",
+    "    return transformed_img, out\n",
     "\n",
     "\n",
     "def get_pytorch_output(arch, dataset):\n",
@@ -191,118 +211,49 @@
     "    # Run network.\n",
     "    out_pytorch = pytorch_model(img_torch.unsqueeze(0))\n",
     "\n",
-    "    return out_pytorch"
+    "    return img_torch, out_pytorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verify the equivalency of Caffe and PyTorch models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking vgg16 voc_2007.\n",
-      "(299, 299, 3)\n",
-      "(224, 224, 3)\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "Checking vgg16 coco_2014.\n",
-      "(299, 299, 3)\n",
-      "(224, 224, 3)\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "Checking resnet50 voc_2007.\n",
-      "(299, 299, 3)\n",
-      "(224, 224, 3)\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "Checking resnet50 coco_2014.\n",
-      "(299, 299, 3)\n",
-      "(224, 224, 3)\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before anything', (224, 224, 3))\n",
-      "('After resize', (224, 224, 3))\n",
-      "('After transpose,', (3, 224, 224))\n",
-      "('Before channel swap', array([0.3501936 , 0.35717496, 0.32926106], dtype=float32))\n",
-      "('After channel swap', (3, 224, 224), array([0.32926106, 0.35717496, 0.3501936 ], dtype=float32))\n",
-      "('Before raw scale', 0.0073909643, 0.0073909643)\n",
-      "('After raw scale', 1.8846959, 253.96303, array([83.96157, 91.07961, 89.29936], dtype=float32))\n",
-      "('Before mean', 161.58652, (3, 224, 224))\n",
-      "('After mean', 46.787186, array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n",
-      "('Before input_scale', -121.66359, 148.03018, (3, 224, 224))\n",
-      "('After input_scale', -121.66359, 148.03018, (3, 224, 224), array([-19.977428, -25.699387, -34.38064 ], dtype=float32))\n"
+      "Checking vgg16 voc_2007...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/users/ruthfong/anaconda2/lib/python2.7/site-packages/skimage/io/_io.py:49: UserWarning: `as_grey` has been deprecated in favor of `as_gray`\n",
+      "  warn('`as_grey` has been deprecated in favor of `as_gray`')\n",
+      "/users/ruthfong/anaconda2/lib/python2.7/site-packages/skimage/transform/_warps.py:105: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
+      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n",
+      "/users/ruthfong/anaconda2/lib/python2.7/site-packages/skimage/transform/_warps.py:110: UserWarning: Anti-aliasing will be enabled by default in skimage 0.15 to avoid aliasing artifacts when down-sampling images.\n",
+      "  warn(\"Anti-aliasing will be enabled by default in skimage 0.15 to \"\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transformer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-b82b1c5f93e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m# Check that pre-processed image is the same.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mimg_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1e-5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m# Check that output is nearly the same (looks like small floating point differences).\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transformer' is not defined"
      ]
     }
    ],
@@ -313,14 +264,15 @@
     "for arch in arches:\n",
     "    for dataset in datasets:\n",
     "        print('Checking %s %s...' % (arch, dataset))\n",
-    "        caffe_out = get_caffe_output(arch, dataset)\n",
-    "        pytorch_out = get_pytorch_output(arch, dataset)\n",
+    "        caffe_img, caffe_out = get_caffe_output(arch, dataset)\n",
+    "        pytorch_img, pytorch_out = get_pytorch_output(arch, dataset)\n",
     "\n",
     "        # Check that pre-processed image is the same.\n",
-    "        assert np.sum(transformer.preprocess('data', img) - img_torch.numpy()) < 1e-5\n",
+    "        assert np.sum(caffe_img - img_torch.numpy()) < 1e-5\n",
     "\n",
     "        # Check that output is nearly the same (looks like small floating point differences).\n",
-    "        assert np.mean(out['fc8'].squeeze() - out_pytorch.data.numpy().squeeze()) < 1e-5"
+    "        assert np.mean(out['fc8'].squeeze() - out_pytorch.data.numpy().squeeze()) < 1e-5\n",
+    "        print('Correct!\\n')"
    ]
   }
  ],
