--- a/verify_models.ipynb
+++ b/verify_models.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,37 +223,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking vgg16 voc_2007...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/users/ruthfong/anaconda2/lib/python2.7/site-packages/skimage/io/_io.py:49: UserWarning: `as_grey` has been deprecated in favor of `as_gray`\n",
-      "  warn('`as_grey` has been deprecated in favor of `as_gray`')\n",
-      "/users/ruthfong/anaconda2/lib/python2.7/site-packages/skimage/transform/_warps.py:105: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
-      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n",
-      "/users/ruthfong/anaconda2/lib/python2.7/site-packages/skimage/transform/_warps.py:110: UserWarning: Anti-aliasing will be enabled by default in skimage 0.15 to avoid aliasing artifacts when down-sampling images.\n",
-      "  warn(\"Anti-aliasing will be enabled by default in skimage 0.15 to \"\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'transformer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-b82b1c5f93e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m# Check that pre-processed image is the same.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mimg_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1e-5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m# Check that output is nearly the same (looks like small floating point differences).\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'transformer' is not defined"
+      "Checking vgg16 voc_2007...\n",
+      "Correct!\n",
+      "\n",
+      "Checking vgg16 coco_2014...\n",
+      "Correct!\n",
+      "\n",
+      "Checking resnet50 voc_2007...\n",
+      "Correct!\n",
+      "\n",
+      "Checking resnet50 coco_2014...\n",
+      "Correct!\n",
+      "\n"
      ]
     }
    ],
@@ -268,12 +256,19 @@
     "        pytorch_img, pytorch_out = get_pytorch_output(arch, dataset)\n",
     "\n",
     "        # Check that pre-processed image is the same.\n",
-    "        assert np.sum(caffe_img - img_torch.numpy()) < 1e-5\n",
+    "        assert np.sum(caffe_img - pytorch_img.numpy()) < 1e-5\n",
     "\n",
     "        # Check that output is nearly the same (looks like small floating point differences).\n",
-    "        assert np.mean(out['fc8'].squeeze() - out_pytorch.data.numpy().squeeze()) < 1e-5\n",
+    "        assert np.mean(caffe_out['fc8'].squeeze() - pytorch_out.data.numpy().squeeze()) < 1e-5\n",
     "        print('Correct!\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
